Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,8 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: docwithdoxygen@0
+  inputs:
+    ProjectName: 'Crecre'
+    SourceFilePattern: '*.cs *.ts *.js *.c *.java *.cpp'
+    UseCustomDoxyFile: false
